fixed images pt.3 and some margin spacing

--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -131,15 +131,15 @@ h3{
 }
 
 .ProfilePageContent .Content ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    text-align: initial;
     margin: 0;
     margin-top: 25px;
+    margin-right: 15px;
     padding: 0;
 }
 
 .ProfilePageContent .Content ul li{
+    justify-self: flex-start;
     margin-bottom: 25px;
     font-size: 20px;
 }
